hphp/hack/test/typecheck/constraints/multi_as_invoke_ambiguous.php.like_types.exp
File "multi_as_invoke_ambiguous.php", line 29, characters 19-21:
You are trying to access the member Bar but this is not an object, it is a dynamic value or an object of type K (Typing[4062])
File "multi_as_invoke_ambiguous.php", line 19, characters 15-15:
Definition is here
